Closed
Bug 766821
Opened 13 years ago
Closed 13 years ago
Clear dead wood from Bindings
Categories
(Core :: JavaScript Engine, defect)
Core
JavaScript Engine
Tracking
()
RESOLVED
FIXED
mozilla16
People
(Reporter: n.nethercote, Assigned: n.nethercote)
Details
(Whiteboard: [js:t])
Attachments
(1 file)
|
16.76 KB,
patch
|
luke
:
review+
|
Details | Diff | Splinter Review |
This patch cleans up Bindings.
- It removes the unnecessary |cx| arg from Bindings() and transfer().
- It removes clone() and lastArgument(), because they are dead.
- It removes makeImmutable(). It wasn't dead, but it only contains
assertions and the comment above its declaration was completely
misleading, so it didn't seem worth salvaging.
Attachment #635165 -
Flags: review?(luke)
Comment 1•13 years ago
|
||
Comment on attachment 635165 [details] [diff] [review]
patch
Right on.
Attachment #635165 -
Flags: review?(luke) → review+
| Assignee | ||
Comment 2•13 years ago
|
||
Comment 3•13 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla16
You need to log in
before you can comment on or make changes to this bug.
Description
•