Bug 766821 - Clear dead wood from Bindings.  r=luke.

--HG--
extra : rebase_source : 88a769b7cc17ba4c850208e5c59916c1f7b2bde8